--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,35 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
-    </group>
 
-    <item android:title="Communicate">
-        <menu>
+        <item android:title="Sensors">
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:id="@+id/nav_temperature"
+                android:icon="@drawable/ic_menu_camera"
+                android:title="@string/menu_temperature" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+                android:id="@+id/nav_humidity"
+                android:icon="@drawable/ic_menu_gallery"
+                android:title="@string/menu_humidity" />
+            <item
+                android:id="@+id/nav_hygrometer"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="@string/menu_hydro" />
+            <item
+                android:id="@+id/nav_luminosity"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="@string/menu_luminosity" />
+        </item>
+
+    </group>
 
 </menu>
