Change Value Formatter, and style for MainActivity

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,19 +6,19 @@
         <item android:title="Sensors">
             <item
                 android:id="@+id/nav_temperature"
-                android:icon="@drawable/ic_menu_camera"
+                android:icon="@drawable/celsius"
                 android:title="@string/menu_temperature" />
             <item
                 android:id="@+id/nav_humidity"
-                android:icon="@drawable/ic_menu_gallery"
+                android:icon="@drawable/hailstorm"
                 android:title="@string/menu_humidity" />
             <item
                 android:id="@+id/nav_hygrometer"
-                android:icon="@drawable/ic_menu_slideshow"
+                android:icon="@drawable/hailstorm"
                 android:title="@string/menu_hydro" />
             <item
                 android:id="@+id/nav_luminosity"
-                android:icon="@drawable/ic_menu_slideshow"
+                android:icon="@drawable/luminosity"
                 android:title="@string/menu_luminosity" />
         </item>
 
