--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="dark_gray">#2E2E2E</color>
+    <color name="dark_green">#04B404</color>
+    <color name="light_green">#01DF01</color>
 </resources>
