--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="dark_gray">#2E2E2E</color>
     <color name="dark_green">#04B404</color>
     <color name="light_green">#01DF01</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="dark_gray_text">#48484a</color>
 </resources>
