--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -17,7 +17,7 @@
         android:id="@+id/activity_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="?attr/actionBarSize"></FrameLayout>
+        android:layout_marginTop="?attr/actionBarSize"/>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
